# Gitrim

./: LICENSE  README.md  pyproject.toml  requirements.txt
gitclean/: cleaner.py  cli.py
tests/: test_cleaner.py
