[project]
name = "gitrim"
version = "0.1.0"
description = "CLI tool to detect large files in Git history and working directory with pre-commit hook support."
readme = "README.md"
authors = [
    { name="Kapil", email="kydv901@gmail.com" }
]
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "GitPython",
    "rich",
    "click"
]

[project.urls]
Homepage = "https://github.com/yadavkapil23/Gitrim"
Repository = "https://github.com/yadavkapil23/Gitrim"
Issues = "https://github.com/yadavkapil23/Gitrim/issues"

[project.scripts]
gitrim = "gitclean.cli:cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
